update my changes

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
                     </div>
                 </div>
                 <div class="stats">
-                    <div class="box">
+                    <div class="box1">
                         <p>Tweets</p>
                         <p>60</p>
                     </div>
-                    <div class="box">
+                    <div class="box2">
                         <p>Following</p>
                         <p>100</p>
                     </div>
-                    <div class="box">
+                    <div class="box3">
                         <p>Followers</p>
                         <p>500</p>
                     </div>
@@ -105,8 +105,8 @@
                         <div class="comment-header">
                            <div class="box">
                                <img src="img/Home_page-10.png" alt="Avatar" style="vertical-align:middle;">
-                               <span>User Name</span>
-                               <span>@Login user-id - 1day</span>
+                               <span id="username">User Name</span>
+                               <span id="userid">@Login user-id - 1day</span>
                             </div>
                            <div class="box">
                                <img src="img/Home_page-17.png"/>
@@ -120,19 +120,19 @@
                         <div class="comment-footer">
                             <div>
                                 <img src="img/Home_page-06.png" alt="comment">
-                                <span>50</span>
+                                <span id="comment">50</span>
                             </div>
                             <div>
                                 <img src="img/Home_page-07.png" alt="refresh">
-                                <span>50</span>
+                                <span id="refresh">50</span>
                             </div>
                             <div>
                                 <img src="img/Home_page-08.png" alt="heart">
-                                <span>50</span>
+                                <span id="heart">50</span>
                             </div>
                             <div>
                                 <img src="img/Home_page-09.png" alt="mail">
-                                <span>50</span>        
+                                <span id="mail">50</span>        
                             </div>
                         </div>
                     </div>
@@ -221,4 +221,5 @@
         </div>
     </div>
 </body>
+<script type="text/javascript" src="index.js"></script>
 </html>
