--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
                 <div class="stats">
                     <div class="box1">
                         <p>Tweets</p>
-                        <p>60</p>
+                        <p id="tweets">60</p>
                     </div>
                     <div class="box2">
                         <p>Following</p>
-                        <p>100</p>
+                        <p id="following">100</p>
                     </div>
                     <div class="box3">
                         <p>Followers</p>
-                        <p>500</p>
+                        <p id="followers">500</p>
                     </div>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                            <div class="box">
                                <img src="img/Home_page-10.png" alt="Avatar" style="vertical-align:middle;">
                                <span id="username">User Name</span>
-                               <span id="userid">@Login user-id - 1day</span>
+                               <span id="userid">@Login user-id</span><span>1 day</span>
                             </div>
                            <div class="box">
                                <img src="img/Home_page-17.png"/>
@@ -142,8 +142,8 @@
                         <div class="comment-header">
                            <div class="box">
                                <img src="img/Home_page-10.png" alt="Avatar" style="vertical-align:middle;">
-                               <span>User Name</span>
-                               <span>@Login user-id - 24hr</span>
+                               <span id="username">User Name</span>
+                               <span id="userid">@Login user-id </span><span>24hr</span>
                             </div>
                            <div class="box">
                                <img src="img/Home_page-17.png"/>
@@ -182,8 +182,8 @@
                         <div class="comment-header">
                            <div class="box">
                                <img src="img/Home_page-10.png" alt="Avatar" style="vertical-align:middle;">
-                               <span>User Name</span>
-                               <span>@Login user-id - 12hr</span>
+                               <span id="username">User Name</span>
+                               <span id="userid">@Login user-id </span><span>12 hr</span>
                             </div>
                            <div class="box">
                                <img src="img/Home_page-17.png"/>
